--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
   "bugs": {
     "url": "https://github.com/jeffwray/ralph-unpossible/issues"
   },
+  "scripts": {
+    "test": "./test/run-tests.sh"
+  },
   "engines": {
     "node": ">=18.0.0"
   }
